[package]
name = "eva01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-account-decoder = "=2.1.20"
solana-client = "=2.1.20"
solana-program = "=2.1.20"
solana-sdk = "=2.1.20"
spl-associated-token-account = "6.0.0"
solana-cli-output = "=2.1.20"
spl-token = "7.0.0"

anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
anchor-client = { version = "0.31.1" }

anyhow = "1.0.79"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
bincode = "1.3.3"
bytemuck = "1.22.0"
bytes = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dirs = "4.0.0"
env_logger = "0.11.3"
fixed = "1.28.0"
fixed-macro = "1.2.0"
futures = "0.3.30"
futures-sink = "0.3.30"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client", branch = "2.1" }
lazy_static = "1.5.0"
log = "0.4.21"
num-traits = "0.2.18"
rayon = "1.10.0"
serde = "1.0.197"
serde_json = "1.0.116"
sha2 = "0.10.8"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
toml = "0.8.12"
tonic = "0.10.2"
tonic-health = "0.10.2"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" } 
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
jito-sdk-rust = "0.2.2"
base64 = "0.21.0" 
switchboard-on-demand = "0.3.5"
switchboard-on-demand-client = "0.4.0-alpha-0.0.5"
chrono = "0.4.38"
hex = "0.4.3"
url = "2.5.2"
warp = "0.3.7"
prometheus = "0.13.4"
indexmap = "2.9"

[dependencies.marginfi]
git = "https://github.com/mrgnlabs/marginfi-v2"
tag = "mrgn-0.1.3"
features = [
    "mainnet-beta",
    "client",
    "no-entrypoint",
] 

[profile.release]
opt-level = 3
lto = true