[package]
name = "eva01"
version = "0.1.0"
edition = "2021"

[features]
publish_to_db = [
  "postgres",
  "tokio-postgres-rustls",
  "rustls",
  "rustls-native-certs",
  "rustls-pemfile",
]
pretty_logs = []

[dependencies]
solana-account-decoder = "=2.1.20"
solana-client = "=2.1.20"
solana-program = "=2.1.20"
solana-sdk = "=2.1.20"
spl-associated-token-account = "6.0.0"
solana-cli-output = "=2.1.20"
spl-token = "7.0.0"

anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
anchor-client = { version = "0.31.1" }

anyhow = "1.0.79"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
bincode = "1.3.3"
bytemuck = "1.22.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.11.3"
fixed = "1.28.0"
fixed-macro = "1.2.0"
futures = "0.3.30"
futures-sink = "0.3.30"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client", branch = "2.1" }
lazy_static = "1.5.0"
log = "0.4.21"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
switchboard-on-demand = "0.3.8"
switchboard-on-demand-client = "=0.4.1-alpha0.0.0"
chrono = "0.4.38"
warp = "0.3.7"
prometheus = "0.13.4"
indexmap = "2.9"
tiny_http = "0.12"
signal-hook = "0.3.18"
ctrlc = "3.4.7"

postgres = { version = "0.19.10", optional = true, features = ["with-chrono-0_4"] }
tokio-postgres-rustls = { version = "=0.12", optional = true }
rustls = { version = "0.23.31", optional = true, default-features = false, features = ["std"] }
rustls-native-certs = { version = "0.8.1", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dependencies.marginfi_type_crate]
git = "https://github.com/mrgnlabs/marginfi-v2"
tag = "mrgn-0.1.6-rc1"
package = "marginfi-type-crate"

[dependencies.marginfi]
git = "https://github.com/mrgnlabs/marginfi-v2"
tag = "mrgn-0.1.6-rc1"
features = ["mainnet-beta", "client", "no-entrypoint"]

[dev-dependencies]
serial_test = "3.2.0"

[profile.release]
opt-level = 3
lto = true
