[package]
name = "eva01"
version = "0.1.0"
edition = "2021"

[features]
pretty_logs = []

[dependencies]
solana-account-decoder = "=2.1.20"
solana-client = "=2.1.20"
solana-program = "=2.1.20"
solana-sdk = "=2.1.20"
spl-associated-token-account = "6.0.0"
solana-cli-output = "=2.1.20"
spl-token = "7.0.0"

anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
anchor-client = { version = "0.31.1" }

anyhow = "1.0.102"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
dotenv = "0.15.0"
bytemuck = "1.22.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.11.9"
fixed = "1.28.0"
fixed-macro = "1.2.0"
futures = "0.3.32"
futures-sink = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.29"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
chrono = "0.4.44"
warp = "0.4.2"
prometheus = "0.14.0"
indexmap = "2.13.0"
tiny_http = "0.12.0"
signal-hook = "0.4.3"
ctrlc = "3.5.2"

yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", branch = "v2.1" }
switchboard-on-demand = "0.11.3"
# Includes a fix to the way results are parsed.
switchboard-on-demand-client = { git = "https://github.com/abdulrabbani00/switchboard-sdk", rev = "99cf3f29143b81fd3ad17649725a3f994b253fbb" }
switchboard-on-demand-v03 = { package = "switchboard-on-demand", version = "0.3.8" }
solana-dex-superagg = { git = "https://github.com/0dotxyz/solana-dex-superagg", rev = "3ab0b4f4de424a0044e983576d113e3b349b3d94" }

[dependencies.marginfi_type_crate]
git = "https://github.com/mrgnlabs/marginfi-v2"
rev = "fd8e5df6b6a511068c86166c31a2084f242004ad"
#tag = "mrgn-0.1.7-rc2"
package = "marginfi-type-crate"

[dependencies.marginfi]
git = "https://github.com/mrgnlabs/marginfi-v2"
rev = "fd8e5df6b6a511068c86166c31a2084f242004ad"
#tag = "mrgn-0.1.7-rc2"
features = ["mainnet-beta", "client", "no-entrypoint"]

[dependencies.jupiter-swap-api-client]
git = "https://github.com/IliaZyrin/jupiter-swap-api-client"
rev = "6e209786084a4344538a1aa695f126169fa95022"

[dev-dependencies]
serial_test = "3.2.0"
figment = { version = "0.10", features = ["test"] }

[profile.release]
opt-level = 3
lto = true
